<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/g_border"
        tools:context=".ui.sort.SortFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/space_xxxxxxxxl"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/space_xs"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/space_xxxl">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_order"
                    android:textSize="@dimen/text_xxl"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2">

                    <RadioButton
                        android:id="@+id/rbAsc"
                        android:layout_width="@dimen/space_nil"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/ascending" />

                    <RadioButton
                        android:id="@+id/rbDesc"
                        android:layout_width="@dimen/space_nil"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/descending" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by"
                    android:textSize="@dimen/text_xxl"
                    android:layout_marginTop="@dimen/space_xl"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/rbTitle"
                        android:layout_width="@dimen/space_nil"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/title" />

                    <RadioButton
                        android:id="@+id/rbDate"
                        android:layout_width="@dimen/space_nil"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_m"
                        android:textStyle="bold"
                        android:text="@string/date" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xxxxl"
                    android:paddingHorizontal="@dimen/space_xxxxl"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/cs_blue"
                    app:cornerRadius="@dimen/space_m"
                    android:text="@string/done" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>